--- a/produtos/templates/base.html
+++ b/produtos/templates/base.html
@@ -11,7 +11,35 @@
 </head>
 <body>
 
-{% block content %}{% endblock %}
+    <header>
+
+    <div class="esquerda">
+        <img class="logo"src="{% static 'img/logo.png' %}" alt="">
+        <a class="btn" href="#">Home</a>
+        <a class="btn" href="{% url 'produto_list' %}">Produtos</a>
+        <a class="btn" href="{% url 'categoria_list' %}">Categoria</a>
+        <a class="btn" href="{% url 'movimentacao_list' %}">Movimentacao</a>
+    </div>
+
+    <div class="direita">
+        <a class="btn" href="{% url 'profile' %}">Perfil</a>
+        
+        <form action="{% url 'logout' %}" method="post" style="display: inline;">
+            {% csrf_token %}
+            <button type="submit" class="btn" style="background: none; border: none; color: white; cursor: pointer; font-size: 1.3rem;"> Sair </button>
+        </form>
+
+    </div>
+
+    </header>
+
+    <div class="container">
+    {%block content%}{%endblock%}
+    </div>
+
+    <footer>
+
+    </footer>
 
 </body>
 </html>
