--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -1,8 +1,104 @@
 body {
-    background-color: #f0f0f0;
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+.navbar {
+    background-color: #333;
+    overflow: hidden;
+}
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.navbar a:hover {
+    background-color: #ddd;
+    color: black;
+}
+.navbar-right {
+    float: right;
+}
+form {
+    display: inline;
+}
+button {
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    padding: 14px 16px;
+    font: inherit; 
+}
+button:hover {
+    background-color: #ddd;
+    color: black;
 }
 
-h2 {
-    color: #333;
+.table-container {
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo geral para a tabela */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: left;
+    background-color: #f3f3f3;
+}
+
+/* Estilo para cabeçalho da tabela */
+table thead th {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 15px;
+}
+
+/* Estilo para células da tabela */
+table tbody td {
+    padding: 12px 15px;
+    border-bottom: 1px solid #ddd;
+}
+
+/* Linhas alternadas com cor diferente */
+table tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+/* Hover para destacar a linha */
+table tbody tr:hover {
+    background-color: #e9e9e9;
+    transition: background-color 0.3s;
+}
+
+/* Células de rodapé da tabela (opcional) */
+table tfoot td {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 15px;
+    font-weight: bold;
+}
+
+/* Borda arredondada (opcional) */
+table {
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
